# OOPLabs2024

Lab1/: fisie.txt  numarare.cpp
Laborator 1/: printf_scanf.cpp
Laborator 2/problema 1/: CMakeLists.txt  NumberList.cpp  main.cpp
Laborator 2/problema 2/: CMakeLists.txt  Global.cpp  Global.h  Student.cpp  Student.h  main.cpp
Laborator 3/Problema 1/: CMakeLists.txt  Math.cpp  Math.h  main.cpp
Laborator 3/Problema 2/: CMakeLists.txt  Canvas.cpp  Canvas.h  main.cpp
Laborator 4/problema 1/: CMakeLists.txt  Sort.cpp  Sort.h  main.cpp
Laborator 5/Problema 1/: CMakeLists.txt  main.cpp
Laborator 5/problema 1/: Number.cpp  Number.h  Source.cpp  lab5.vcxproj  lab5.vcxproj.filters
Laborator 5/problema 1/x64/Debug/: lab5.exe.recipe  lab5.ilk  vc143.idb
Laborator 5/problema 1/x64/Debug/lab5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lab5.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Laborator 6/Problema 1/: BMW.cpp  BMW.h  CMakeLists.txt  Car.h  Circuit.cpp  Circuit.h  Fiat.cpp  Fiat.h  RangeRover.cpp  RangeRover.h  Seat.cpp  Seat.h  Volvo.cpp  Volvo.h  Wheather.h  main.cpp
Laborator 7/problema1/: CMakeLists.txt  main.cpp
Laborator 7/problema2/: CMakeLists.txt  main.cpp  tree.h
Laborator 8/: main.cpp
Laborator 9/: Map.h  main.cpp
